switch to mongodb

--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     "reset:prisma-mysql": "npx prisma migrate reset --schema=./prisma/mysql/schema.prisma",
     "generate:prisma-mysql": "npx prisma generate --schema=./prisma/mysql/schema.prisma",
     "push:prisma-mysql": "npx prisma db push --schema=./prisma/mysql/schema.prisma",
-    "generate:prisma-all": "npm run generate:prisma-mysql && npm run generate:prisma-authenticate",
-    "push:prisma-all": "npm run push:prisma-mysql && npm run push:prisma-authenticate",
+    "studio:prisma-store": "npx prisma studio --schema=./prisma/cookit-ecommerce-service/schema.prisma",
+    "reset:prisma-store": "npx prisma migrate reset --schema=./prisma/cookit-ecommerce-service/schema.prisma",
+    "generate:prisma-store": "npx prisma generate --schema=./prisma/cookit-ecommerce-service/schema.prisma",
+    "push:prisma-store": "npx prisma db push --schema=./prisma/cookit-ecommerce-service/schema.prisma",
+    "generate:prisma-all": "npm run generate:prisma-authenticate && npm run generate:prisma-store",
+    "push:prisma-all": "npm run push:prisma-authenticate && npm run generate:prisma-store",
     "prisma": "npm run generate:prisma-all && npm run push:prisma-all",
     "dev": "next dev",
     "build": "next build",
