--- a/package.json
+++ b/package.json
@@ -7,10 +7,6 @@
     "reset:prisma-authenticate": "npx prisma migrate reset --schema=./prisma/authenticate/schema.prisma",
     "push:prisma-authenticate": "npx prisma db push --schema=./prisma/authenticate/schema.prisma",
     "studio:prisma-authenticate": "npx prisma studio --schema=./prisma/authenticate/schema.prisma",
-    "studio:prisma-mysql": "npx prisma studio --schema=./prisma/mysql/schema.prisma",
-    "reset:prisma-mysql": "npx prisma migrate reset --schema=./prisma/mysql/schema.prisma",
-    "generate:prisma-mysql": "npx prisma generate --schema=./prisma/mysql/schema.prisma",
-    "push:prisma-mysql": "npx prisma db push --schema=./prisma/mysql/schema.prisma",
     "studio:prisma-store": "npx prisma studio --schema=./prisma/cookit-ecommerce-service/schema.prisma",
     "reset:prisma-store": "npx prisma migrate reset --schema=./prisma/cookit-ecommerce-service/schema.prisma",
     "generate:prisma-store": "npx prisma generate --schema=./prisma/cookit-ecommerce-service/schema.prisma",
@@ -22,7 +18,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate --schema=./prisma/authenticate/schema.prisma && prisma generate --schema=./prisma/mysql/schema.prisma"
+    "postinstall": "prisma generate --schema=./prisma/authenticate/schema.prisma && npm run generate:prisma-store"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.12",
@@ -31,6 +27,7 @@
     "@headlessui/react": "^1.7.18",
     "@hookform/resolvers": "^3.3.3",
     "@prisma/client": "^5.9.1",
+    "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
