--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "stripe": "^14.16.0",
     "swr": "^2.2.4",
     "tailwind-merge": "^2.2.0",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.3.3",
