--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "next-auth": "^5.0.0-beta.4",
     "next-cloudinary": "^5.7.0",
     "next-themes": "^0.2.1",
+    "nextjs-cors": "^2.2.0",
     "postcss": "8.4.32",
     "query-string": "^8.2.0",
     "react": "18.2.0",
