--- a/package.json
+++ b/package.json
@@ -59,6 +59,8 @@
     "embla-carousel-react": "^8.0.0-rc22",
     "eslint": "8.56.0",
     "eslint-config-next": "14.0.4",
+    "firebase": "^10.9.0",
+    "fluent-ffmpeg": "^2.1.2",
     "framer-motion": "^10.16.16",
     "lucide-react": "^0.303.0",
     "next": "14.0.4",
@@ -95,6 +97,7 @@
     "@tanstack/eslint-plugin-query": "^5.14.6",
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
+    "@types/fluent-ffmpeg": "^2.1.24",
     "@types/uuid": "^9.0.7",
     "prisma": "^5.9.1",
     "sass": "^1.69.5"
