--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.12",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
+    "@chakra-ui/next-js": "^2.2.0",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@googlemaps/markerclusterer": "^2.5.3",
     "@headlessui/react": "^1.7.18",
     "@hookform/resolvers": "^3.3.3",
     "@prisma/client": "^5.11.0",
@@ -41,6 +44,8 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-tooltip": "^1.0.7",
+    "@react-google-maps/api": "^2.19.3",
     "@shadcn/ui": "^0.0.4",
     "@tailwindcss/forms": "^0.5.6",
     "@tanstack/react-query": "^5.15.5",
@@ -62,10 +67,12 @@
     "eslint": "8.56.0",
     "eslint-config-next": "14.0.4",
     "firebase": "^10.9.0",
-    "framer-motion": "^10.16.16",
+    "framer-motion": "^10.18.0",
     "ioredis": "^5.3.2",
     "isomorphic-dompurify": "^2.6.0",
+    "jotai": "^2.8.0",
     "lodash": "^4.17.21",
+    "lodash.template": "^4.5.0",
     "lucide-react": "^0.303.0",
     "next": "14.0.4",
     "next-auth": "^5.0.0-beta.4",
@@ -94,6 +101,8 @@
     "tailwindcss": "3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.3.3",
+    "unist-builder": "^4.0.0",
+    "use-places-autocomplete": "^4.0.1",
     "uuid": "^9.0.1",
     "vaul": "^0.8.0",
     "zod": "^3.22.4",
@@ -105,7 +114,9 @@
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/fluent-ffmpeg": "^2.1.24",
+    "@types/google.maps": "^3.55.7",
     "@types/lodash": "^4.17.0",
+    "@types/lodash.template": "^4.5.3",
     "@types/uuid": "^9.0.7",
     "prisma": "^5.11.0",
     "sass": "^1.69.5"
