--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.12",
+    "@builder.io/partytown": "^0.10.1",
     "@chakra-ui/next-js": "^2.2.0",
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
@@ -40,6 +41,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
@@ -118,7 +120,6 @@
     "@types/lodash": "^4.17.0",
     "@types/lodash.template": "^4.5.3",
     "@types/uuid": "^9.0.7",
-    "prisma": "^5.11.0",
-    "sass": "^1.69.5"
+    "prisma": "^5.11.0"
   }
 }
